<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Product Overview -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/overview" />

            <!-- Name and price -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingEnd="4dp"
                android:paddingStart="4dp">

                <!-- Name -->
                <EditText
                    android:id="@+id/edit_book_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/book_name"
                    android:inputType="textCapWords" />

                <!-- Price -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edit_price"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/price"
                        android:inputType="number" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <!-- Quantity -->
        <LinearLayout
            android:id="@+id/container_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/quantity" />

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/increment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/increment_btn" />

                <EditText
                    android:id="@+id/text_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text=""
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/decrement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/decrement_btn" />

            </LinearLayout>
        </LinearLayout>

        <!-- Supplier info -->
        <LinearLayout
            android:id="@+id/container_supplier_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/activity_margin"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/supplier_info" />

            <!-- Info -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- name -->
                <EditText
                    android:id="@+id/edit_supplier_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/supplier_name"
                    android:inputType="text" />
                <!-- phone -->
                <EditText
                    android:id="@+id/edit_supplier_phone"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/supplier_phone"
                    android:inputType="phone" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/save_btn"
            style="@style/ActionButtonStyle"
            android:background="@color/background"
            android:text="@string/save_btn"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/call_btn"
            style="@style/ActionButtonStyle"
            android:layout_marginVertical="@dimen/activity_margin"
            android:background="@color/background"
            android:text="@string/call_btn"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/bookicon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"

                android:text="@string/info_edit" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>